--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -17,4 +17,7 @@ jobs:
       - uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          external_repository: kunkka2/kunkka2.github.io
+          publish_branch: main
           publish_dir: ./book
+          full_commit_message: :rocket: ${{ github.event.head_commit.message }}
