--- a/book.toml
+++ b/book.toml
@@ -6,5 +6,5 @@ src = "src"
 title = "Calendar"
 
 [output.html]
-additional-css = ["mermaid.css"]
+additional-css = ["mermaid.css", "custom.css"]
 additional-js = ["mermaid.min.js", "mermaid-init.js"]
