--- a/book.toml
+++ b/book.toml
@@ -8,3 +8,8 @@ title = "Calendar"
 [output.html]
 additional-css = ["mermaid.css", "custom.css"]
 additional-js = ["mermaid.min.js", "mermaid-init.js"]
+git-repository-url = "https://github.com/softtiny/docs.calendar"
+git-repository-icon = "fa-github"
+
+[output.html.print]
+enable = false
