--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -10,7 +10,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
-      - run: cargo install mdbook --no-default-features --features search
+      - run: |
+        cargo install mdbook --no-default-features --features search
+        cargo install mdbook-katex
       - run: mdbook build
       - uses: peaceiris/actions-gh-pages@v3
         with:
