--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -18,6 +18,7 @@ jobs:
           cargo install mdbook --no-default-features --features search
           cargo install mdbook-katex
       - run: mdbook build
+      - run: cp sitemap.xml book/sitemap.xml
       - uses: peaceiris/actions-gh-pages@v3
         with:
           deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
