--- a/book.toml
+++ b/book.toml
@@ -10,6 +10,8 @@ additional-css = ["mermaid.css", "custom.css"]
 additional-js = ["mermaid.min.js", "mermaid-init.js"]
 git-repository-url = "https://github.com/softtiny/docs.calendar"
 git-repository-icon = "fa-github"
+site-url="/"
+use-site-url-as-root = true
 
 [output.html.print]
 enable = false
