--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -16,7 +16,10 @@ jobs:
         run: |
           date
           cargo install mdbook --no-default-features --features search
-          cargo install mdbook-katex
+          git clone https://github.com/lzanini/mdbook-katex.git mdbook-katex
+          cd mdbook-katex 
+          sed -i 's/mdbook-preprocessor = {version = "0.5.1"}/mdbook-preprocessor = {version = "0.5.2"}/g'
+          cargo install --path . mdbook-katex
           mdbook-katex supports
       - run: mdbook build
       - run: cp static/* book/.
