--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -15,10 +15,9 @@ jobs:
       - name: mdbook add
         run: |
           date
-          cargo install mdbook --no-default-features --features search
+          cargo install mdbook --no-default-features --features search --version 0.5.1
           git clone https://github.com/lzanini/mdbook-katex.git mdbook-katex
           cd mdbook-katex 
-          sed -i 's/mdbook-preprocessor = {version = "0.5.1"}/mdbook-preprocessor = {version = "0.5.2"}/g' Cargo.toml
           cargo install --path . mdbook-katex
           mdbook-katex supports
       - run: mdbook build
