--- a/book.toml
+++ b/book.toml
@@ -9,9 +9,8 @@ title = "Calendar"
 additional-css = ["mermaid.css", "custom.css"]
 additional-js = ["mermaid.min.js", "mermaid-init.js"]
 git-repository-url = "https://github.com/softtiny/docs.calendar"
-git-repository-icon = "fa-github"
+git-repository-icon = "fas-code-fork"
 site-url="/"
-use-site-url-as-root = true
 
 [output.html.print]
 enable = false
